Pom file cleanups
Motivation:
We were missing a profile for Java 20, and setting some properties that were not used.

Modification:
Add a profile for Java 20.
Remove properties from profiles that are either not used, or set the property to the baseline value.

Result:
Cleaner parent pom file.